snapshot-tests/tests/snapshots/annotate_snippets__eof.snap
---
source: snapshot-tests/tests/annotate_snippets.rs
expression: rendered
---
error: unexpected eof encountered at key
 --> eof:1:6
  |
1 | key =
  |      ^
